# 2024_haptic_teleops

./: README.md
esp32code/testing_serial_gravitiy_balanced_arm/: testing_serial_gravitiy_balanced_arm.ino
esp32code/working_serial_spring_balanced_arm/: working_serial_spring_balanced_arm.ino
ros2_teleops/install/: local_setup.sh  setup.sh
ros2_teleops/install/PD_pkg/lib/PD_pkg/: pd_controller_node
ros2_teleops/install/PD_pkg/share/PD_pkg/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_teleops/install/comport/lib/comport/: serial_COM_node  serial_read_COM_node  (+2 more)
ros2_teleops/log/: latest_build
ros2_teleops/src/PD_pkg/: CMakeLists.txt
ros2_teleops/src/PD_pkg/launch/: pid_v0.launch.py
ros2_teleops/src/PD_pkg/src/: pid.cpp
ros2_teleops/src/comport/: CMakeLists.txt
ros2_teleops/src/comport/launch/: serial_com.launch.py  serial_seperate_com.launch.py
ros2_teleops/src/comport/src/: read_com.cpp  read_write_com.cpp  write_com.cpp
ros2_teleops/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_teleops/src/log/: latest_build
ros2_teleops/src/publisher_speed_test/: CMakeLists.txt
ros2_teleops/src/publisher_speed_test/launch/: com_port.launch.py  speed_test.launch.py
ros2_teleops/src/publisher_speed_test/src/: com_port_test.cpp  simple_test_publisher.cpp
ros2_teleops/src/subscriber_speed_test/: CMakeLists.txt  package.xml
ros2_teleops/src/subscriber_speed_test/launch/: serial_write_test.launch.py
ros2_teleops/src/subscriber_speed_test/src/: simple_test_serial_write.cpp
(+72 files in other folders)
